First draft SOAReligion/css/profile.css
/* font-family: 'Barlow Semi Condensed', sans-serif;
font-family: 'EB Garamond', serif; */

/* ---------- PROGRESS INDICATOR STYLING ---------- */
/* The progress container (the light grey background) */
.progress-container {
    position: fixed;
    top: 0;
    z-index: 1000;
    width: 100%;
    height: 20px;
    background: #D9D9D9;
}

/* The progress bar (the darker grey scroll indicator) */
.progress-bar {
    height: 20px;
    background: #F2B646;
    width: 0%;
}

/* ---------- SECTION STYLING ---------- */
/* Section Styling */
.section-title {
    position: relative;
    display: flex;
    align-items: center;
    justify-content: center;
}

#name {
    font-size: 4.5em;
    position: relative;
    padding: 0px;

}

#slash {
    font-size: 10em;
    font-weight: lighter;
    position: relative;
    padding: 0px;
}

#slash2 {
    font-size: 8em;
    font-weight: 100;
    position: relative;
    padding: 10px;
    color: darkgray;
}

#practicing {
    font-family: 'EB Garamond', serif;
    font-weight: 600;
    font-style: italic;
    font-size: 1.6rem;
    position: relative;
    padding: 0px;
    line-height: 1.5rem;
}

.section-text {
    padding: 50px;
}

.section-text-sides-only {
    padding-left: 50px;
    padding-right: 50px;
}

.section-video {
    position: relative;
    padding-top: 10px;
    padding-bottom: 10px;
    width: 100%;
}

.embed-responsive {
    position: relative;
    display: inline-block;
    width: 88%;
    padding: 0;
    overflow: hidden;
    justify-content: center;
}

.caption {
    position: relative;
    padding: 10px;
    margin-left: 10px;
    color: none;
    font-family: 'Barlow', sans-serif;
    font-weight: 300;
    font-size: 14px;
    max-width: 95%;
    line-height: 1.1rem;

}

.section-end {
    display: flex;
    align-items: center;
    justify-content: center;
}

/* Footer Styling */
footer {
    position: relative;
    padding: 30px;
    align-items: center;
    width: 100%;
    background-color: #e7e8e8;
    margin-top: 7rem;
}

footer a:visited {
    color: #dc950f;

}


footer p {
    font-family: 'Barlow', sans-serif;
    font-style: normal;
    font-weight: 400;
    font-size: 15px;
    text-align: right;
    margin: 2px;
    color: #6d6e6e;
}

footer a {
    color: #dc950f;
}

/* ---------- TEXT STYLING ---------- */
/* Heading and Text Styling */
#logo h5 {
    color: black;
    line-height: 1.1rem;
}

.top-nav {
    text-align: right;
    margin-top: 25px;
    margin-right: 20px;
}

.top-nav a {
    margin-left: 0.5rem;
    margin-right: 0.5rem;
}

.right-nav {
    color: #F2B646;
}

.right-nav :hover {
    color: #D9D9D9;
    text-decoration: none;
}

.right-nav :active {
    color: #F2B646;
    font-weight: bolder;
    text-decoration: none;
}

/* Lines */

.hr-sect {
    font-family: 'Barlow', sans-serif;
    display: flex;
    flex-basis: 100%;
    align-items: center;
    color: black;
    margin: 8px 0px;
}

.hr-sect::before,
.hr-sect::after {
    content: "";
    flex-grow: 1;
    background: black;
    height: 1px;
    font-size: 0px;
    line-height: 0px;
    margin: 0px 8px;
}

h1 {
    font-family: 'Barlow', sans-serif;
    font-weight: 800;
}

h2 {
    font-family: 'Barlow', sans-serif;
    font-weight: 200;
    text-align: center;
}

h3 {
    font-family: 'Barlow', sans-serif;
    font-weight: 800;

}

h4 {
    font-family: 'Barlow', sans-serif;
    font-weight: 400;
    font-size: 1.2rem;
    margin-bottom: 1rem;
}

h5 {
    font-family: 'Barlow', sans-serif;
    font-weight: 800;
    font-size: 1.2rem;
    margin-bottom: 1rem;

}



h6 {
    font-family: 'Barlow', sans-serif;
    font-weight: 600;
    font-size: 1.1rem;
    margin-bottom: 1rem;

}

p {
    font-family: 'EB Garamond', serif;
    font-size: 17px;
    line-height: 1.3rem;
}

ol p {
    margin-top: 0.6rem;
    color: #818282;
    overflow: auto;
    font-family: 'Barlow', sans-serif;
    font-size: 0.8rem;
    line-height: 1rem;

}


li {
    font-family: 'Barlow', sans-serif;
    font-weight: 500;
}


.info {
    background-color:
        #efefef;
    padding: 50px;
    margin-top: ;
    color: #6c6c6c;

}

#pillars {
    margin-right: 1.7rem;
}

/* ---------- ASSET STYLING ---------- */
/* IMG and Video Styling */
a:link {
    text-decoration: none;
    color: #808080;

}

a:visited {
    text-decoration: none;
    color: #D9D9D9;
}

a:hover {
    text-decoration: none;
    color: #F2B646;
}

a:active {
    text-decoration: underline;
}

#thin {
    font-weight: 400;
}

img {
    max-width: 100%;
    height: auto;
}

.row {
    display: flex;
}

.column {
    flex: 50%;
    padding: 5px;
}

.portrait {
   
    border-radius: 50%;
    object-fit: cover;
    padding: 50px 0 50px 0;
}

.photo {
    width: 30%;
}


.flex-row {
    display: flex;
    flex-direction: row;
}

.flex-col {
    display: flex;
    flex-direction: column;
}

.align-items-center {
    display: flex;
    align-items: center;
}



.align-text-left {
    text-align: left;
}


.align-text-center {
    text-align: center;
}

.align-text-right {
    text-align: right;
}

.justify-content-center {
    display: flex;
    justify-content: center;
}

.justify-content-flex-end {
    display: flex;
    justify-content: flex-end;
}

.margin-top {
    margin-top: 5rem;
}

.margin-top-small {
    margin-top: 2rem;
}

.margin-top-bottom {
    margin-top: 2rem;
    margin-bottom: 2rem;
}


.choose-story {
    margin-top: 10rem;
}


#barb-story {
    padding-top: 0px;
    padding-bottom: 0px;
    padding-left: 0px;
    padding-right: 2.5rem;
    border-right: 1px solid lightgray;


}

#danny-story {
    padding: 0px;

}

#habiba-story {
    padding-top: 0px;
    padding-bottom: 0px;
    padding-right: 0px;
    padding-left: 2.5rem;
    border-left: 1px solid lightgray;


}

.pull-quote {
    margin-bottom: 5rem;
    margin-top: 2rem;
}

#map {
    height: 370px;
    width: 100%;
    border: 4px solid #F2B646;
}

.map-row {
    margin-bottom: 2.5rem;
}

.mapboxgl-map {
    overflow: hidden;
}

.mapboxgl-popup-content {
    background-color: rgba(255, 255, 255, 0.9);
    min-width: 250px;
    padding: 15px;
}

.mapboxgl-popup-content h3 {
    font-family: 'Barlow', sans-serif;
    font-size: 1.5rem;
    font-weight: 400;
}

.mapboxgl-popup-content h4 {
    font-family: 'Barlow', sans-serif;
    font-weight: 600;
}

.mapboxgl-popup-content p {
    font-family: 'Barlow', sans-serif;
    font-size: 15px;
}

.mapboxgl-popup-close-button {
    font-size: 25px;
    padding: 10px;
}

.map-key {
    display: flex;
    flex-direction: row;
    margin-top: 1rem;
}

.map-key-text {
    font-family: 'Barlow', sans-serif;
    font-style: normal;
    font-weight: 600;
    font-size: 13px;
    line-height: 0.8rem;
    margin-left: 0.4rem;
}

.map-key-circle {
    border-radius: 50%;
    width: 12px;
    height: 12px;
    background-color: black;
}




.flag-img {
    width: 100%;
}


/* ---------- MEDIA QUERIES ---------- */


@media screen and (max-width: 800px) {

    .top-nav a {
        margin-top: 1rem;
    }

    #name {
        font-size: 3.5rem;
    }

    p {
        font-size: 20px;
        line-height: 1.4rem;
    }

    .map-key {
        padding: 1rem;
        margin-top: 0px;
    }

    .map-key-text {
        display: flex;
        align-items: center;
    }

    .map-key-circle {
        padding: 0.6rem;
        margin-left: 0.7rem;
        margin-top: 0.6rem;
        margin-bottom: 0.6rem;


    }

    #barb-story {
        padding-right: 1rem;
    }

    #danny-story {
        padding-left: 0.5rem;
        padding-right: 0.5rem;

    }

    #habiba-story {
        padding-left: 1rem;
    }

    #practicing {
        font-size: 1.5rem;

    }

    footer p {
        line-height: 1.1rem;
        margin-bottom: 0.5rem;
    }



}




@media screen and (min-width: 800px) {}

